# pynanny

./: .gitignore  README.md  azure-pipelines.pr.yml  azure-pipelines.yml  docker-compose.yml
fruitnanny/: Dockerfile  npm-shrinkwrap.json  package.json
fruitnanny/server/routes/: dht.js  dht.ts
janus/: Dockerfile
pynanny/: pynanny.py  pyproject.toml
pynanny/templates/: home.html
pynanny/templates/includes/: footer.html  head.html  scripts.html  styles.html
