[tool.poetry]
name = "pynanny"
version = "0.1.0"
description = ""
authors = ["Iacopo Spalletti <i.spalletti@nephila.it>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = {extras = ["all"], version = "^0.45.0"}
jinja2 = "^2.10.3"
aiofiles = "^0.4.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
